Remove nested css styles / Fix white space on desktop and tablet Home

--- a/components/common/Container/Container.module.css
+++ b/components/common/Container/Container.module.css
@@ -1,12 +1,11 @@
 .container {
   background-color: var(--color-background);
   color: var(--color-text);
-  min-height: 100vh;
+}
 
-  &.variant {
-    background-color: var(--color-background-variant);
-    color: var(--color-text-variant);
-  }
+.variant {
+  background-color: var(--color-background-variant);
+  color: var(--color-text-variant);
 }
 
 .wrapper {
@@ -26,14 +25,14 @@
   @media (width >= 1024px) {
     padding: 64px 0;
   }
+}
 
-  &.full {
-    margin: 0;
-    max-width: 100%;
-    padding: 0;
+.full {
+  margin: 0;
+  max-width: 100%;
+  padding: 0;
 
-    @media (width >= 768px) {
-      place-items: center;
-    }
+  @media (width >= 768px) {
+    place-items: center;
   }
 }
