--- a/components/common/ImageBySize/ImageBySize.module.css
+++ b/components/common/ImageBySize/ImageBySize.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   height: 100%;
+  overflow: hidden;
   width: 100%;
 }
 
